using UnityEngine;

namespace CardSystem
{
	[CreateAssetMenu(fileName="ScriptableCard_Missed_",menuName="Card System/Cards/Missed Card")]

	public class MissedCard : Card
	{
		
	}

}