namespace CardSystem
{

	public enum Suits
	{
		Hearts,
		Spade,
		Diamonds,
		Clubs
	}

}