using CardSystem;
using UnityEngine;

public class Character : MonoBehaviour
{
    public Health health;
    public DeckHolder deckHolder;
}