using UnityEngine;

namespace Points
{
    public class EmptyPoint: Point
    {
        [SerializeField] private float waitTime;
    }
}