using UnityEngine;

namespace Points
{
    public class EnemyPoint: Point
    {
        [SerializeField] private Character enemy;
    }
}