using UnityEngine;

namespace Points
{
    public abstract class Point : MonoBehaviour
    {
        [SerializeField] private Transform cameraPoint;
    }
}
